--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <title>Virtual DOM From Scratch</title>
 </head>
 <body>
-  This App uses our custom built VDOM :)
-  <br/>
-  <div id="root">root</div>
+  <div id="root"></div>
 
-  <script src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
